libddetectdir = $(libdir)
libddetectdatadir = $(datadir)
libddetectincludedir = $(includedir)/ddetect

libddetect_LTLIBRARIES=libddetect.la
libddetect_la_SOURCES=deepdetect.h deepdetect.cc caffelib.h caffelib.cc mllibstrategy.h mlmodel.h mlservice.h caffemodel.h caffemodel.cc inputconnectorstrategy.h imginputfileconn.h commandlineapi.h commandlineapi.cc apidata.h jsonapi.h jsonapi.cc ext/plustache/context.hpp ext/plustache/template.hpp ext/plustache/plustache_types.hpp ext/plustache/context.cpp ext/plustache/template.cpp

#libddetectinclude_SOURCES=deepdetect.h

AM_CXXFLAGS=-Wall -Wextra -g -fopenmp
